--- a/templates/test.hbs
+++ b/templates/test.hbs
@@ -83,6 +83,13 @@
             margin-bottom: .1in;
         }
 
+        .page-section__subHead {
+            color: #141414;
+            font-size: 14px;
+            margin-bottom: .1in;
+            font-weight: 500;
+        }
+
         .page-section .image-data {
             display: flex;
             flex-direction: row;
@@ -129,6 +136,24 @@
             min-width: auto;
             padding: .1in;
 
+        }
+
+        .cards_container {
+            display: flex;
+
+            flex-direction: row;
+            flex-wrap: wrap;
+        }
+
+        .cards_container .card__image,
+        .cards_container .card__text {
+            border: solid 1px #f1f1f1;
+            padding: 1rem;
+            font-size: 10px;
+        }
+
+        .cards_container .card__image {
+            padding: 1rem 2rem;
         }
     </style>
 
@@ -268,16 +293,97 @@
 
     </div>
     <div id="page2" class="page landscape">
-        Page 2
+        <div class="page-footer">
+            <div class="footer__left">
+                Powered by Chkfake
+            </div>
+            <div class="footer__right">
+                2/4
+            </div>
+        </div>
+        <div class="page-section__container">
+            <div class="page-section">
+                <div class="page-section__head">
+                    Photographic Evidence:
+                </div>
+                <div class="page-section__subHead">
+                    Product
+                </div>
+                <div class="cards_container">
+                    <div class="card">
+                        <div class="card__image">
+                            <img width="140" height="200"
+                                src="https://images.pexels.com/photos/1089930/pexels-photo-1089930.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                        </div>
+                        <div class="card__text">
+                            Cap color is different
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card__image">
+                            <img width="140" height="200"
+                                src="https://images.pexels.com/photos/1089930/pexels-photo-1089930.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                        </div>
+                        <div class="card__text">
+                            Cap color is different
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card__image">
+                            <img width="140" height="200"
+                                src="https://images.pexels.com/photos/1089930/pexels-photo-1089930.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                        </div>
+                        <div class="card__text">
+                            Cap color is different
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card__image">
+                            <img width="140" height="200"
+                                src="https://images.pexels.com/photos/1089930/pexels-photo-1089930.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                        </div>
+                        <div class="card__text">
+                            Cap color is different
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card__image">
+                            <img width="140" height="200"
+                                src="https://images.pexels.com/photos/1089930/pexels-photo-1089930.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                        </div>
+                        <div class="card__text">
+                            Cap color is different
+                        </div>
+                    </div>
+                </div>
+                <div class="page-section__subHead">
+                    MRP Label
+                </div>
+
+            </div>
+        </div>
     </div>
     <div id="page2" class="page landscape">
         Page 3
+        <div class="page-footer">
+            <div class="footer__left">
+                Powered by Chkfake
+            </div>
+            <div class="footer__right">
+                3/4
+            </div>
+        </div>
     </div>
     <div id="page2" class="page landscape">
         Page 4
-    </div>
-    <div id="page2" class="page landscape">
-        Page 5
+        <div class="page-footer">
+            <div class="footer__left">
+                Powered by Chkfake
+            </div>
+            <div class="footer__right">
+                4/4
+            </div>
+        </div>
     </div>
 </body>
 
